--- a/map/index.html
+++ b/map/index.html
@@ -6,6 +6,9 @@
     <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
       integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
       crossorigin=""></script>
+
+      <!-- <link rel="stylesheet" href="lib/L.Control.MousePosition.css" />
+      <script src="lib/L.Control.MousePosition.js" ></script> -->
     <style>
       #mapid { height: 100vh; width: 100vw;}
     </style>
