add js converter and wms

--- a/map/index.html
+++ b/map/index.html
@@ -10,6 +10,7 @@
       <!-- <link rel="stylesheet" href="lib/L.Control.MousePosition.css" />
       <script src="lib/L.Control.MousePosition.js" ></script> -->
     <style>
+      body {margin: 0;}
       #mapid { height: 100vh; width: 100vw;}
     </style>
   </head>
