--- a/map/index.html
+++ b/map/index.html
@@ -1,21 +1,24 @@
 <html>
   <head>
+     <meta charset="utf-8"/>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
       integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
       crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
       integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
       crossorigin=""></script>
-
-      <!-- <link rel="stylesheet" href="lib/L.Control.MousePosition.css" />
-      <script src="lib/L.Control.MousePosition.js" ></script> -->
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link rel="stylesheet" href="lib/L.Control.MousePosition.css" />
+      <script src="lib/L.Control.MousePosition.js" ></script>
     <style>
       body {margin: 0;}
       #mapid { height: 100vh; width: 100vw;}
+      #address {position: absolute; top: 20px; right: 20px; z-index:213213;}
     </style>
   </head>
   <body>
      <div id="mapid"></div>
+     <input id='address' type="text" placeholder="Enter your address"/>
      <script src="bundle.js"></script>
   </body>
 </html>
