add display coords

--- a/map/index.html
+++ b/map/index.html
@@ -8,8 +8,8 @@
       integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
       crossorigin=""></script>
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-      <link rel="stylesheet" href="lib/L.Control.MousePosition.css" />
-      <script src="lib/L.Control.MousePosition.js" ></script>
+      <!-- <link rel="stylesheet" href="lib/L.Control.MousePosition.css" />
+      <script src="lib/L.Control.MousePosition.js" ></script> -->
     <style>
       body {margin: 0;}
       #mapid { height: 100vh; width: 100vw;}
