bundle moved along with map

--- a/demo/map.html
+++ b/demo/map.html
@@ -34,8 +34,7 @@
 
 				<!-- Map -->
 				<div class="container">
-					<span>Choisissez un secteur:</span>
-					<input id='address' type="text" placeholder="Enter your address"/>
+					<input id='address' type="text" placeholder="Entrez une adresse"/>
 				</div>
 				<div class="container">
 					<div id="map_canvas" class="map_canvas">
@@ -60,7 +59,7 @@
 				</div>
 			</div>
 
-
+	<script src="js/bundle.js" ></script>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	</body>
