fixed container of map

--- a/demo/map.html
+++ b/demo/map.html
@@ -42,10 +42,10 @@
 				<div class="container">
 					<input id='address' type="text" placeholder="Entrez une adresse"/>
 				</div>
-				<div class="container">
-					<div id="map_canvas" class="map_canvas">
-					</div>
-				</div>
+			          <div class="container-fluid">
+				    <div id="map_canvas" class="map_canvas">
+                                    </div>
+			          </div>
 				<footer class="navbar-default navbar-fixed-bottom">
 					<div class="row">
 						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
