--- a/demo/index.html
+++ b/demo/index.html
@@ -17,6 +17,13 @@
 		<!-- Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
 
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
+          integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+	        crossorigin=""/>
+        <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
+		      integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+	      crossorigin=""></script>
+	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
 
@@ -27,7 +34,7 @@
 					<nav class="navbar navbar-default">
 						<div class="container">
 							<div class="navbar-header navbar-left">
-								<!-- logo -->
+								<!-- logo, 60px high, limited by container bar -->
 								<a href="./map.html"><img class="img-logo" width="100px" src="./images/u1.svg"></a>
 							</div>
 							<div><i>Root for a tree !</i></div>
@@ -43,19 +50,21 @@
 						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 							<div class="page-header">
 								<h4>
-									NOUS SOUHAITONS R&Eacute;DUIRE LES &Icirc;LOTS DE CHALEUR EN PLANTANT DE ARBRES
+									R&Eacute;DUISONS LES &Icirc;LOTS DE CHALEUR EN PLANTANT DES ARBRES 🌲
 								</h4>
 							</div>
 							<p>
-								Nous regroupons les opinions citoyennes concernant la v&eacute;g&eacute;tation de leur quartiers.
+							  Nous encourageons la plantation de davantage d'arbres en milieu urbain, pour lutter contre les effets néfastes des îlots de chaleur.
+                                                          Nous rassemblons les opinions des citoyens sur la v&eacute;g&eacute;tation de leur quartier,
+                                                          et leur permettons de contribuer au recensement des arbres de la municipalité.
 							</p>
 
 							<!-- buttons -->
-							<div class="row">
-								<div class="btn-group btn-group" role="group">
-									<a href="./map.html" type="button" class="btn btn-outline-success">Luttons contre les &icirc;lots de chaleur !</a>
-									<a href="http://www.irec.net/index.jsp?p=28&f=1608" type="button" class="btn btn-outline-success">Pourquoi planter un arbre ?</a>
-								</div>
+							<div class="container">
+                                                          <a href="http://www.irec.net/index.jsp?p=28&f=1608" type="button" class="btn btn-outline-info">Pourquoi planter un arbre ?</a>
+                                                          &nbsp;
+                                                          <a href="./map.html" type="button" class="btn btn-success btn-lg">Luttons contre les &icirc;lots de chaleur !</a>
+                                                          
 							</div>
 						</div>
 
@@ -77,28 +86,30 @@
 					<div class="row">
 						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 							<!-- 1 -->
+                                                        <br/>
 							<div id="u11" class=" text-center">
 								<img id="u11_img" class="img round" src="./images/u102.png" width="35%">
 							</div>
 							<p class="text-center" style="color:#7a7a7a">
-								Ils causent de la pollution et diminuent la qualit&eacute; de l'air.
+								Ils contribuent au smog, et rendent les particules fines plus toxiques.
 							</p>
 							<!-- 2 -->
 							<div id="u11" class="text-center">
 								<img id="u11_img" class="img round" src="./images/u104.png" width="35%">
 							</div>
 							<p class="text-center" style="color:#7a7a7a">
-								Ils causent des probl&egrave;mes de sant&eacute; d&ucirc;s &agrave; la chaleur.
+								Ils aggravent les probl&egrave;mes de sant&eacute; en temps de canicule.
 							</p>
 						</div>
 
 						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-							<!-- 3 -->
+						  <!-- 3 -->
+                                                  <br/>
 							<div id="u11" class="text-center">
 								<img id="u11_img" class="img round" src="./images/u103.png" width="35%">
 							</div>
 							<p class="text-center" style="color:#7a7a7a">
-								Ils causent des alergies et des probl&egrave;mes de sant&eacute; d&ucirc;s &agrave; la qualit&egrave; de l'air.
+								Ils favorisent les allergies.<br/><br/>
 							</p>
 							
 							<!-- 4 -->
@@ -106,7 +117,7 @@
 								<img id="u11_img" class="img round" src="./images/u17.png" width="35%">
 							</div>
 							<p class="text-center" style="color:#7a7a7a">
-								Ils augmentent le co&ucirc;t de la climatisation des domiciles entre 5 et 12%.
+								Ils provoquent un cercle vicieux de climatisation - excès de chaleur et augmentent le coût en énergie de 5-12%.
 							</p>
 						</div>
 
@@ -116,7 +127,7 @@
 								<img id="u11_img" class="img round" src="./images/u101.png" width="35%">
 							</div>
 							<p class="text-center" style="color:#7a7a7a">
-								Ils emp&ecirc;chent la r&eacute;tention naturelle de l'eau dans le sol.
+								Ils sont associés à une mauvaise absorption naturelle de l'eau dans le sol, contribuant à la pollution des eaux.
 							</p>
 
 							<!-- 6 -->
@@ -124,7 +135,7 @@
 								<img id="u11_img" class="img round" src="./images/u100.png" width="35%">
 							</div>
 							<p class="text-center" style="color:#7a7a7a">
-								Ils produisent un trou dans le budget public.
+								En diminuant les brumes et brouillards, ils nuisent à la qualité de l'air.
 							</p>
 						</div>
 					</div>
