repairs on the timer in index.html

--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
   
-  <meta http-equiv="refresh" content="./map.html/" />
+  <meta http-equiv="refresh" content="35;url=./map.html" />
   
   
   
