--- a/demo/index.html
+++ b/demo/index.html
@@ -46,9 +46,9 @@
       <div class="row">
 	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
 	  <!-- Image -->
-	  <div id="u41" >
-	    <a href="./map.html" src="./images/u41.jpg">
-              <img id="u41_img" class="img" width="80%" src="./images/u41.jpg" style="padding-left:100px;"></a>
+	  <div id="main_tree" >
+	    <a href="./map.html" src="./images/main_tree.png">
+              <img id="main_tree_img" class="img" width="80%" src="./images/main_tree.png" style="padding-left:100px;"></a>
 	  </div>
 	</div>
         
