--- a/demo/map.html
+++ b/demo/map.html
@@ -37,7 +37,8 @@
 	</div>				
       </div>
     </nav>
-    
+
+    <button> Déclarer un arbre manquant</button>    
     <!-- Map -->
     <div class="row justify-content-center">
       <div class="justify-content-center">
