--- a/map/index.html
+++ b/map/index.html
@@ -10,10 +10,11 @@
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <!-- <link rel="stylesheet" href="lib/L.Control.MousePosition.css" />
       <script src="lib/L.Control.MousePosition.js" ></script> -->
+        <script src="lib/leaflet-providers.js"></script>
     <style>
       body {margin: 0;}
       #mapid { height: 100vh; width: 100vw;}
-      #address {position: absolute; top: 20px; right: 20px; z-index:213213;}
+      #address {position: absolute; top: 20px; left: 200px; z-index:213213;}
     </style>
   </head>
   <body>
