--- a/demo/index.html
+++ b/demo/index.html
@@ -4,10 +4,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
   
-  <meta http-equiv="refresh" content="35;url=./map.html" />
-  
-  
-  
   <title>PoTree</title>
   
   <!-- Bootstrap CSS -->
@@ -63,6 +59,12 @@
 	      Nous encourageons la plantation de davantage d'arbres en milieu urbain, pour lutter contre les effets néfastes des îlots de chaleur.
               Nous rassemblons les opinions des citoyens sur la v&eacute;g&eacute;tation de leur quartier,
               et leur permettons de contribuer au recensement des arbres de la municipalité.
+	    </p>
+            <br/>
+	    <p>
+              Ce projet a été rendu possible grâce à la collecte, au partage et
+              à la diffusion des données par Données Québec, le carrefour
+              collaboratif en données ouvertes québécoises.
 	    </p>
           </div>
 	  <!-- buttons -->
