--- a/demo/index.html
+++ b/demo/index.html
@@ -54,18 +54,19 @@
 	      TEMPÉRONS LES &Icirc;LOTS DE CHALEUR EN PLANTANT DES ARBRES 🌲
 	    </h2>
 	  </div>
+            <br/>
           <div class="container">
 	    <p>
 	      Nous encourageons la plantation de davantage d'arbres en milieu urbain, pour lutter contre les effets néfastes des îlots de chaleur.
               Nous rassemblons les opinions des citoyens sur la v&eacute;g&eacute;tation de leur quartier,
               et leur permettons de contribuer au recensement des arbres de la municipalité.
 	    </p>
-            <br/>
 	    <p>
-              Ce projet a été rendu possible grâce à la collecte, au partage et
+              <i>Ce projet a été rendu possible grâce à la collecte, au partage et
               à la diffusion des données par Données Québec, le carrefour
-              collaboratif en données ouvertes québécoises.
+              collaboratif en données ouvertes québécoises.</i>
 	    </p>
+            <br/>
           </div>
 	  <!-- buttons -->
 	  <div class="container">
