--- a/demo/map.html
+++ b/demo/map.html
@@ -21,7 +21,14 @@
 		        integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
 	                crossorigin=""></script>
 	        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-                
+        <script src="js/leaflet-providers.js"></script>
+
+		<style>
+      .leaflet-container.crosshair-cursor-enabled {
+	              cursor:crosshair;
+			            }
+
+</style>
 </head>
 <body>
   <div class="container-fluid text-center">
@@ -38,7 +45,6 @@
       </div>
     </nav>
 
-    <button> Déclarer un arbre manquant</button>    
     <!-- Map -->
     <div class="row justify-content-center">
       <div class="justify-content-center">
@@ -51,6 +57,7 @@
       <div class="container">
         <input id='address' type="text" placeholder="Entrez une adresse"/>
         <div class="row float-right" >
+    	  <a href="#" type="button" id="addTree" class="btn btn-outline-success"> Déclarer un arbre manquant</a>    
           <a href="./index.html" type="button" class="btn btn-outline-success">
             Accueil
           </a>
