--- a/map/index.html
+++ b/map/index.html
@@ -12,6 +12,9 @@
       <script src="lib/L.Control.MousePosition.js" ></script> -->
         <script src="lib/leaflet-providers.js"></script>
     <style>
+      .leaflet-container.crosshair-cursor-enabled {
+        cursor:crosshair;
+      }
       body {margin: 0;}
       #mapid { height: 100vh; width: 100vw;}
       #address {position: absolute; top: 20px; left: 200px; z-index:213213;}
@@ -19,6 +22,7 @@
   </head>
   <body>
      <div id="mapid"></div>
+     <button id="addTree">Ajouter un arbre manquant</button>
      <input id='address' type="text" placeholder="Enter your address"/>
      <script src="bundle.js"></script>
   </body>
